# biscuit-packing

./: Cargo.toml  README.md
src/: app.rs  biscuit_annealing.rs  cli.rs  error.rs  lib.rs  main.rs  point.rs  render.rs
src/test/: app.rs  biscuit_annealing.rs  mod.rs  point.rs  render.rs
