[package]
name = "biscuit-packing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argmin = { version = "0.8.1", features = ["rayon"] }
anyhow = "1.0.75"
serde = "1"
rand_xoshiro = "0.6"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
