[package]
name = "biscuit-packing"
version = "0.1.0"
edition = "2021"

[lib]
name = "biscuit_packing"
path = "src/lib.rs"

[dependencies.argmin]
version = "0.8"
features = ["rayon"]

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.fast_poisson]
version = "1"

[dependencies.futures]
version = "0.3"

[dependencies.rand]
version = "0.8"
features = ["small_rng"]

[dependencies.serde]
version = "1"

[dependencies.svg]
version = "0.14"

[dependencies.tokio]
version = "1.34"
features = ["full"]
